# clib

./: CMakeLists.txt  README.md  flake.nix  shell.nix
.github/workflows/: cmake.yml
array/: CMakeLists.txt  array.c  array.h  array_internal.h  test_array.c
common/: CMakeLists.txt  cassert.h
include/clib/: allocator.h  assert.h  char.h  clib.h  config.h  error.h  file.h  list.h  log.h  panic.h  print.h  string.h  typedef.h  unittest.h
io/: CMakeLists.txt  io.c  io.h  io_internal.h  test_io.c
io/test_assets/: file1.txt
lib/: CMakeLists.txt  allocator.c  error.c  file.c  list.c  log.c  print.c  string.c  unittest.c
log/: CMakeLists.txt  log.c  log.h  log_internal.h  test_log.c
map/: CMakeLists.txt  map.c  map.h  map_internal.h  test_map.c
panic/: CMakeLists.txt  panic.h
str/: CMakeLists.txt  str.c  str.h  str_internal.h  test_str.c
test/: CMakeLists.txt  main.c  test_allocator.h  test_file.h  test_list.h  test_string.h
test/input/: فايل 3
ui/: CMakeLists.txt  test_ui.c  ui.c  ui.h  ui_box.c  ui_box.h  ui_button.c  ui_button.h  ui_internal.h  ui_internal_gtk.c  ui_internal_win.c  ui_internal_win.h  ui_window.c  ui_window.h
ui/ui_internal_gtk/: ui_internal_gtk.c  ui_internal_gtk.h  ui_internal_gtk_button.c  ui_internal_gtk_button.h
ui/ui_internal_win/: ui_internal_win.c  ui_internal_win.h  ui_internal_win_button.h
